[metadata]
name = naviance_admissions_calculator
version = 0.0.1
author = Franca Ellerman
#author_email = author@example.com
description = Code behind my LHS Admissions Calculator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/francaellerman/naviance_admissions_calculator
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
#package_dir =
#    = src
#packages = find:
python_requires = >=3.6

#[options.packages.find]
#where = src
